tests/errors/semantics/call_missing_arg_with_no_default_value.odl
main :: () -> void {
    add :: (a: int, b: int, c: int) -> int {
        return a + b + c;
    };

    s := add(1, 1);
    printint(s);
    println();
};
